[tool.poetry]
name = "study"
version = "0.1.0"
description = ""
authors = ["Ryo Nakao <ryonakao0329@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.2"
pandas = "^1.4.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
